# crm-imgui-test1

./: .gitignore  .gitmodules  CMakeLists.txt
crm/: CMakeLists.txt
crm/crm/: CMakeLists.txt
crm/crm/src/: crm.h
crm/crm/src/crm/: app.cpp  app.h  main.cpp
crm/crm/src/crm/db/: client.cpp  client.h  server.cpp  server.h
crm/crm/src/crm/ui/: clients.cpp  clients.h  imgui.cpp  imgui.h  ui.cpp  ui.h
crm/crm/src/crm/views/: clients.cpp  clients.h
crm/tests/: CMakeLists.txt  test_db.c  test_db.cpp  test_imgui.cpp
src/: app.cpp  db_client.cpp  db_client.h  db_server.h  main.cpp
